--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "deploy-storybook": "storybook-to-ghpages"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,7 @@
     "@storybook/addon-links": "^5.3.8",
     "@storybook/addons": "^5.3.8",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.8"
+    "@storybook/react": "^5.3.8",
+    "@storybook/storybook-deployer": "^2.8.1"
   }
 }
