--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -14,4 +14,4 @@ jobs:
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: build # The folder the action should deploy.
-        BUILD_SCRIPT: npm run storybook # The build script the action should run prior to deploying.
+        BUILD_SCRIPT: npm run deploy-storybook # The build script the action should run prior to deploying.
