--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-knobs": "^5.3.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.1",
+    "yarn": "^1.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,11 +38,11 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.10",
-    "@storybook/addon-links": "^5.3.10",
-    "@storybook/addons": "^5.3.10",
+    "@storybook/addon-actions": "^5.3.12",
+    "@storybook/addon-links": "^5.3.12",
+    "@storybook/addons": "^5.3.12",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.10",
+    "@storybook/react": "^5.3.12",
     "@storybook/storybook-deployer": "^2.8.1"
   }
 }
